deploy/resources/generation/resources/generation/resources/generation/sas-bases/overlays/network/istio/components/sas-configuration/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-config-reconciler
spec:
  host: sas-config-reconciler
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /configReconciler/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-configuration
spec:
  host: sas-configuration
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /configuration/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-config-reconciler
    sas.com/admin: namespace
  name: sas-config-reconciler
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /configReconciler
    - uri:
        prefix: /configReconciler/
    route:
    - destination:
        host: sas-config-reconciler
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-configuration
    sas.com/admin: namespace
  name: sas-configuration
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /configuration
    - uri:
        prefix: /configuration/
    route:
    - destination:
        host: sas-configuration
    timeout: 300s
